Fix: Vo 수정 KAN-14